<resources>
    <string name="app_name">YouTubeApi</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="number_of_videos">Number of videos</string>
    <string name="video_name">Video Name</string>
    <string name="time">Time</string>
    <string name="back">Back</string>
    <string name="desc">Desc</string>
    <string name="title">Title</string>
</resources>